--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,3 +8,18 @@ jobs:
         uses: actions/checkout@v3
       - name: hello
         run: echo "Hello, my first workflow"
+      - name: python env
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      - name: install dependencies
+        run: python -m pip install --upgrade pip
+      - run: pip install -r requirements.txt
+      - name: find project
+        run: echo $GITHUB_WORKSPACE
+      - name: linting
+        run: flake8 . --count
+      - name: coverage test
+        run: coverage run -m pytest
+      - run: coverage report
+        
