--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,7 +1,12 @@
 name: My-first-workflow
-on: [push]
+on: 
+  push:
+    paths:
+      - tests/**
+      - flaskr/**
 jobs:
   build:
+    if: github.ref!='release'
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -19,8 +24,11 @@ jobs:
         run: echo $GITHUB_WORKSPACE
       - name: linting
         continue-on-error: true
+        if: github.ref=='main'
         run: flake8 . --count
       - name: coverage test
+        if: github.ref=='main'
         run: coverage run -m pytest
       - run: coverage report
+        if: github.ref=='main'
         
