--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,12 +1,13 @@
 name: My-first-workflow
 on: 
   push:
+    branches-ignore:
+      - 'release'
     paths:
-      - tests/**
-      - flaskr/**
+      - 'tests/**'
+      - 'flaskr/**'
 jobs:
   build:
-    if: github.ref!='remote/release'
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -24,11 +25,11 @@ jobs:
         run: echo $GITHUB_WORKSPACE
       - name: linting
         continue-on-error: true
-        if: github.ref=='remote/main'
+        if: github.repository=='main'
         run: flake8 . --count
       - name: coverage test
-        if: github.ref=='remote/main'
+        if: github.repository=='main'
         run: coverage run -m pytest
       - run: coverage report
-        if: github.ref=='remote/main'
+        if: github.repository=='main'
         
